# rprint

./: .gitignore  LICENSE  README.md  build.ps1  package-lock.json  package.json
.claude/plan/: rprint-architecture.md
.github/workflows/: ci.yml  release.yml
scripts/: build-release.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  renderer.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/printer/: mod.rs  pdf.rs  windows_printer.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/server/: mod.rs
src/features/designer/: DesignerPage.tsx
src/features/designer/compilers/: index.ts  pdfCompiler.ts
src/features/designer/components/Canvas/: CanvasArea.tsx
src/features/designer/components/Palette/: ComponentPalette.tsx
src/features/designer/components/Properties/: PropertiesPanel.tsx
src/features/designer/components/Rulers/: RulerWrapper.tsx
src/features/designer/stores/: designerStore.ts  index.ts
src/features/designer/types/: index.ts  template.ts
src/lib/: tauri.ts
src/stores/: appStore.ts
src/types/: index.ts
